2008-08-05	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* download.html:
	* index.html:
	Added 2.23.6 release

2008-08-03	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* download.html:
	* index.html:
	Added 2.22.3.1 release

2008-07-21	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* download.html:
	* index.html:
	Added 2.23.5 release

2008-07-16	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* index.html:
	Fixed some typos (fixes bug #540110)
	
2008-06-30	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* download.html:
	* index.html:
	Added 2.22.3 release

2008-06-29	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* images/screenshots
	* images/Makefile.am
	* getinvolved.html
	* download.html
	* index.html
	* screenshots.html:
	Added screenshots section

2008-06-27	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* getinvolved.html
	* index.html
	* default.css:
	Fixed HTML error and added Contribute section to getinvolved.html 

2008-06-27	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* index.html:
	Adjusted link to GPLv2

2008-06-27	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	Create initial site