@@ -86,6 +86,30 @@
     <div id="right">
         <div id="news">
 	    <h2 class="">News</h2>
+	    <h3>August 18, 2008</h3>
+		  <b>Unstable</b> version 2.23.90 released.<br />
+		    This release comes with new twitter and identi.ca
+		    micro blogging modules.
+		    Developers can make use of the new deskbar.core.Web module
+		    which provides an easy way to store account credentials in
+			gnome keyring, a dialog for managing an account, an
+			asynchronous url opener that hooks into the account
+			framework mentioned above to ask for credentials.
+			Last but not least, items from history can now be deleted
+			one by one when pressing the delete key. However, this
+			doesn't work in tray mode, yet.
+			<br /><br />
+			Changes since 2.23.6:
+			<ul>
+				<li>Add method load_base64_icon to deskbar.core.Utils. Handy for inlining icons inside modules for easier distribution</li>
+				<li>Introduced a new utility package deskbar.core.Web with tools for dealing with online services</li>
+				<li>Introduced a Twitter and identi.ca micro blogging module</li>
+				<li>Set entry width to 10 when the value is smaller than 10 in CuemuiacAlignedView</li>
+				<li>Fixed <a href="http://bugzilla.gnome.org/show_bug.cgi?id=538558">bug #538558</a>:
+				Check for directories in $PATH if they are actual directories and if they exist, are readable and executable</li>
+			</ul>
+	    	<a href="download.html">Download it</a>
+	    	
 		<h3>August 5, 2008</h3>
 		  <b>Unstable</b> version 2.23.6 released.<br />
 			This release includes a new Google module
