@@ -1,3 +1,9 @@
+2008-08-18	Sebastian Pölsterl	<sebp@cvs.gnome.org>
+
+	* download.html:
+	* index.html:
+	Added 2.23.90 release
+
 2008-08-05	Sebastian Pölsterl	<sebp@cvs.gnome.org>
 
 	* download.html:
